--- a/HTML/Uudai.html
+++ b/HTML/Uudai.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/CSS/Uudai.css">
-    <link rel="stylesheet" href="/CSS/mobileUuDai.css" media="screen and (max-width: 550px)">
+    <link rel="stylesheet" href="../CSS/Uudai.css">
+    <link rel="stylesheet" href="../CSS/mobileUuDai.css" media="screen and (max-width: 550px)">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
@@ -25,7 +25,7 @@
      <nav>
          <div class="flex center">
            <div class="flex logo" id="main">
-             <a href="/HTML/TrangChu.html"> <img src="/PICTURE/Logo3.png" alt="img"></a>
+             <a href="/HTML/TrangChu.html"> <img src="../PICTURE/Logo3.png" alt="img"></a>
              <ul class="flex menu">
                  <li><a href="/HTML/TiecCuoi.html">Tiệc Cưới</a></li>
                  <li><a href="/HTML/HoiNghi.html">Hội Nghị</a></li>
@@ -42,7 +42,7 @@
     <div class="b1">
         <div class="overlay">
             <a href="#" id="SK">
-                <img src="/PICTURE/uudai.jpg" >
+                <img src="../PICTURE/uudai.jpg" >
                 <div class="text"><i class="fa-solid fa-arrows-to-dot" style="font-size: 40px;"></i>ƯU ĐÃI<i class="fa-solid fa-arrows-to-dot" style="font-size: 40px;"></i></div>
             </a>
         </div>
@@ -55,7 +55,7 @@
                     <p >Đặt tiệc cưới tại White Palace với số lượng từ 300 khách trở lên, bạn sẽ được tặng kỳ trăng mật lãng mạn tại Fusion Resort Cam Ranh, tuyệt tác nghỉ dưỡng 5 sao nổi tiếng với bãi biển nguyên sơ và view ngắm hoàng hôn cực đỉnh!</p>            
                 </div>
                 <div class="a3">
-                    <img src="/PICTURE/uudai1.jpg" alt="SK1">
+                    <img src="../PICTURE/uudai1.jpg" alt="SK1">
                 </div>
             </div>
         </div>
@@ -63,7 +63,7 @@
         <div class="a0">
             <div class="a">
                 <div class="a3">
-                    <img src="/PICTURE/uudai2.jpg" alt="SK1">
+                    <img src="../PICTURE/uudai2.jpg" alt="SK1">
                 </div>
                 <div class="a1">
                     <h2>ƯU ĐÃI DỊCH VỤ TIỆC DOANH NGHIỆP TỪ 500.000++/KHÁCH</h2>
@@ -91,7 +91,7 @@
                         <br>Trang trí hoa tươi</p>            
                 </div>
                 <div class="a3">
-                    <img src="/PICTURE/uudai3.jpg" alt="SK1">
+                    <img src="../PICTURE/uudai3.jpg" alt="SK1">
                 </div>
             </div>
         </div>
@@ -99,7 +99,7 @@
         <div class="a0">
             <div class="a">
                 <div class="a3">
-                    <img src="/PICTURE/uudai4.jpg" alt="SK1">
+                    <img src="../PICTURE/uudai4.jpg" alt="SK1">
                 </div>
                 <div class="a1">
                     <h2>QUÀ TẶNG BÀN TIỆC "TOUCH OF DELIGHT"</h2>
@@ -122,14 +122,14 @@
                         Lấy cảm hứng từ câu chuyện về những sắc hoa hạnh phúc, mùa yêu này, White Palace trân trọng dành tặng bạn: không gian trang trí đẳng cấp với nhiều lựa chọn.</p>            
                 </div>
                 <div class="a3">
-                    <img src="/PICTURE/uudai5.jpg" alt="SK1">
+                    <img src="../PICTURE/uudai5.jpg" alt="SK1">
                 </div>
             </div>
         </div>
         <div class="a0">
             <div class="a">
                 <div class="a3">
-                    <img src="/PICTURE/uudai6.png" alt="SK1">
+                    <img src="../PICTURE/uudai6.png" alt="SK1">
                 </div>
                 <div class="a1">
                     <h2>TẬN HƯỞNG TUẦN TRĂNG MẬT ĐẢO THIÊN ĐƯỜNG</h2>
@@ -147,7 +147,7 @@
                     </p>            
                 </div>
                 <div class="a3">
-                    <img src="/PICTURE/uudai7.jpg" alt="SK1">
+                    <img src="../PICTURE/uudai7.jpg" alt="SK1">
                 </div>
             </div>
         </div>
@@ -206,6 +206,6 @@
         <a href="#"><i class="fa-brands fa-facebook-f"></i> Facebook</a>
      </div>
 
-    <script src="/JAVACSRIP/TrangChu.js" type="text/javascript"></script>
+    <script src="../JAVACSRIP/TrangChu.js" type="text/javascript"></script>
 </body>
 </html>
