--- a/HTML/HoiNghi.html
+++ b/HTML/HoiNghi.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/CSS/TrangChu.css">
-    <link rel="stylesheet" href="/CSS/TiecCuoi.css">
-    <link rel="stylesheet" href="/CSS/mobileTrangChu.css" media="screen and (max-width: 550px)">
-    <link rel="stylesheet" href="/CSS/mobileTiecCuoi.css"  media="screen and (max-width: 550px)">
+    <link rel="stylesheet" href="../CSS/TrangChu.css">
+    <link rel="stylesheet" href="../CSS/TiecCuoi.css">
+    <link rel="stylesheet" href="../CSS/mobileTrangChu.css" media="screen and (max-width: 550px)">
+    <link rel="stylesheet" href="../CSS/mobileTiecCuoi.css"  media="screen and (max-width: 550px)">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <title>Tiec Cuoi</title>
 </head>
@@ -27,7 +27,7 @@
      <nav>
          <div class="flex center">
            <div class="flex logo" id="main">
-             <a href="/HTML/TrangChu.html"> <img src="/PICTURE/Logo3.png" alt="img"></a>
+             <a href="/HTML/TrangChu.html"> <img src="../PICTURE/Logo3.png" alt="img"></a>
              <ul class="flex menu">
                  <li><a href="/HTML/TiecCuoi.html">Tiệc Cưới</a></li>
                  <li><a href="/HTML/HoiNghi.html">Hội Nghị</a></li>
@@ -42,7 +42,7 @@
      </nav>
     <main>
         <div class="nda">
-            <img src="/PICTURE/HoiNghi/HoiNghi1.jpg" alt="Img2">
+            <img src="../PICTURE/HoiNghi/HoiNghi1.jpg" alt="Img2">
         </div>
         <div class="nda0">
             <h3>HỘI NGHỊ HOÀN HẢO </h3>
@@ -54,12 +54,12 @@
                     <p>Màu vàng trong đám cưới tượng trưng cho sự sung túc, đủ đầy, được thiết kế với sắc vàng trầm ấm. Cách sử dụng màu vàng của cánh đồng hoa Tulip đang độ đón nắng xuân làm tông màu chủ đạo đã tạo nên một sảnh cưới vô cùng đặc biệt tại nhà hàng tiệc cưới Callary.</p>
                 </div>
                 <div class="ndb2">
-                    <img class="zoom" src="/PICTURE/HoiNghi/HoiNghi2.jpg" alt="IMG2">
+                    <img class="zoom" src="../PICTURE/HoiNghi/HoiNghi2.jpg" alt="IMG2">
                 </div>
             </div>
             <div class="ndb0">
                 <div class="ndb2">
-                    <img class="zoom" src="/PICTURE/HoiNghi/HoiNghi3.jpg" alt="IMG2">
+                    <img class="zoom" src="../PICTURE/HoiNghi/HoiNghi3.jpg" alt="IMG2">
                 </div>
                 <div class="ndb1">
                     <h4>TRANG THIẾT BỊ TRONG HỘI NGHỊ</h4>
@@ -75,7 +75,7 @@
                     </p>
                 </div>
                 <div class="ndb2">
-                    <img class="zoom" src="/PICTURE/HoiNghi/HoiNghi4.jpg" alt="IMG2">
+                    <img class="zoom" src="../PICTURE/HoiNghi/HoiNghi4.jpg" alt="IMG2">
                 </div>
             </div>
         </div>
@@ -134,5 +134,5 @@
         <a href="#"><i class="fa-solid fa-phone"></i> 09091678989</a>
         <a href="#"><i class="fa-brands fa-facebook-f"></i> Facebook</a>
      </div>
-     <script src="/JAVACSRIP/TrangChu.js" type="text/javascript"></script>
+     <script src="../JAVACSRIP/TrangChu.js" type="text/javascript"></script>
 </body>
