--- a/HTML/Khampha.html
+++ b/HTML/Khampha.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/CSS/Khampha.css">
-    <link rel="stylesheet" href="/CSS/mobileKhamPha.css" media="screen and (max-width: 550px)">
+    <link rel="stylesheet" href="../CSS/Khampha.css">
+    <link rel="stylesheet" href="../CSS/mobileKhamPha.css" media="screen and (max-width: 550px)">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
@@ -41,7 +41,7 @@
     <div class="b1">
         <div class="overlay">
             <a href="#">
-                <img src="/PICTURE/khampha.jpg" >
+                <img src="../PICTURE/khampha.jpg" >
                 <div class="text"><i class="fa-solid fa-arrows-to-dot" style="font-size: 40px;"></i>KHÁM PHÁ<i class="fa-solid fa-arrows-to-dot" style="font-size: 40px;"></i></div>
             </a>
         </div>
@@ -70,7 +70,7 @@
         </div>
         <div class="b1">
             <div class="overlay">
-                <img src="/PICTURE/kp2.jpg" >
+                <img src="../PICTURE/kp2.jpg" >
                 <div class="b0">
                     <div >
                         <div class="textcheck">
@@ -159,6 +159,6 @@
         <a href="#"><i class="fa-brands fa-facebook-f"></i> Facebook</a>
      </div>
 
-    <script src="/JAVACSRIP/TrangChu.js" type="text/javascript"></script>
+    <script src="../JAVACSRIP/TrangChu.js" type="text/javascript"></script>
 </body>
 </html>
