--- a/HTML/SuKien.html
+++ b/HTML/SuKien.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/CSS/Sukien.css">
-    <link rel="stylesheet" href="/CSS/mobileUuDai.css" media="screen and (max-width: 550px)">
+    <link rel="stylesheet" href="../CSS/Sukien.css">
+    <link rel="stylesheet" href="../CSS/mobileUuDai.css" media="screen and (max-width: 550px)">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
@@ -25,7 +25,7 @@
      <nav>
          <div class="flex center">
            <div class="flex logo" id="main">
-             <a href="/HTML/TrangChu.html"> <img src="/PICTURE/Logo3.png" alt="img"></a>
+             <a href="/HTML/TrangChu.html"> <img src="../PICTURE/Logo3.png" alt="img"></a>
              <ul class="flex menu">
                  <li><a href="/HTML/TiecCuoi.html">Tiệc Cưới</a></li>
                  <li><a href="/HTML/HoiNghi.html">Hội Nghị</a></li>
@@ -41,7 +41,7 @@
     <div class="b1">
         <div class="overlay">
             <a href="#" id="SK">
-                <img src="/PICTURE/sukien.jpg" >
+                <img src="../PICTURE/sukien.jpg" >
                 <div class="text"><i class="fa-solid fa-arrows-to-dot" style="font-size: 40px;"></i>SỰ KIỆN<i class="fa-solid fa-arrows-to-dot" style="font-size: 40px;"></i></div>
             </a>
         </div>
@@ -59,14 +59,14 @@
                             FUSION RESORT PHÚ QUỐC TRONG 3 NGÀY 2 ĐÊM</p> </p>            
                 </div>
                 <div class="a3">
-                    <img src="/PICTURE/sk1.jpg" alt="SK1">
+                    <img src="../PICTURE/sk1.jpg" alt="SK1">
                 </div>
             </div>
         </div>
         <div class="a0">
             <div class="a">
                 <div class="a3">
-                    <img src="/PICTURE/sk2.jpg" alt="SK1">
+                    <img src="../PICTURE/sk2.jpg" alt="SK1">
                 </div>
                 <div class="a1">
                     <h2>THƯƠNG HIỆU TRÌNH DIỄN TẠI ELLE WEDDING ART GALLERY</h2>
@@ -87,7 +87,7 @@
                     <p >Là thương hiệu gắn liền với sự thanh lịch, lòng hiếu khách và tinh thần duy mỹ, suốt hành trình phát triển hơn 12 năm, White Palace luôn không ngừng nỗ lực mang đến cho khách hàng những trải nghiệm tối ưu nhất. Sau thành công rực rỡ của hai mùa triển lãm Love Paradise, đầu tháng 10 sắp tới, White Palace cùng tạp chí ELLE sẽ mang đến cho bạn một sự kiện thời trang cưới đẳng cấp hàng đầu Việt Nam </p>            
                 </div>
                 <div class="a3">
-                    <img src="/PICTURE/sk3.jpg" alt="SK1">
+                    <img src="../PICTURE/sk3.jpg" alt="SK1">
                 </div>
             </div>
         </div>
@@ -146,6 +146,6 @@
         <a href="#"><i class="fa-brands fa-facebook-f"></i> Facebook</a>
      </div>
 
-    <script src="/JAVACSRIP/TrangChu.js" type="text/javascript"></script>
+    <script src="../JAVACSRIP/TrangChu.js" type="text/javascript"></script>
 </body>
 </html>
