--- a/HTML/TiecCuoi.html
+++ b/HTML/TiecCuoi.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/CSS/TrangChu.css">
-    <link rel="stylesheet" href="/CSS/TiecCuoi.css">
-    <link rel="stylesheet" href="/CSS/mobileTrangChu.css" media="screen and (max-width: 550px)">
-    <link rel="stylesheet" href="/CSS/mobileTiecCuoi.css"  media="screen and (max-width: 550px)">
+    <link rel="stylesheet" href="../CSS/TrangChu.css">
+    <link rel="stylesheet" href="../CSS/TiecCuoi.css">
+    <link rel="stylesheet" href="../CSS/mobileTrangChu.css" media="screen and (max-width: 550px)">
+    <link rel="stylesheet" href="../CSS/mobileTiecCuoi.css"  media="screen and (max-width: 550px)">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <title>Tiec Cuoi</title>
 </head>
@@ -27,7 +27,7 @@
      <nav>
          <div class="flex center">
            <div class="flex logo" id="main">
-             <a href="/HTML/TrangChu.html"> <img src="/PICTURE/Logo3.png" alt="img"></a>
+             <a href="/HTML/TrangChu.html"> <img src="../PICTURE/Logo3.png" alt="img"></a>
              <ul class="flex menu">
                  <li><a href="/HTML/TiecCuoi.html">Tiệc Cưới</a></li>
                  <li><a href="/HTML/HoiNghi.html">Hội Nghị</a></li>
@@ -42,7 +42,7 @@
      </nav>
     <main>
         <div class="nda">
-            <img src="/PICTURE/TiecCuoi/TiecCuoi1.jpg" alt="Img2">
+            <img src="../PICTURE/TiecCuoi/TiecCuoi1.jpg" alt="Img2">
         </div>
         <div class="nda0">
             <h3>DỊCH VỤ TIỆC CƯỚI CAO CẤP </h3>
@@ -55,12 +55,12 @@
                      Âm nhạc, hình ảnh, mọi diễn tiến trong ngày cưới của bạn...</p>
                 </div>
                 <div class="ndb2">
-                    <img class="zoom" src="/PICTURE/TiecCuoi/TiecCuoi2.jpg" alt="IMG2">
+                    <img class="zoom" src="../PICTURE/TiecCuoi/TiecCuoi2.jpg" alt="IMG2">
                 </div>
             </div>
             <div class="ndb0">
                 <div class="ndb2">
-                    <img class="zoom" src="/PICTURE/TiecCuoi/TiecCuoi3.jpg" alt="IMG2">
+                    <img class="zoom" src="../PICTURE/TiecCuoi/TiecCuoi3.jpg" alt="IMG2">
                 </div>
                 <div class="ndb1">
                     <h4>THỰC ĐƠN TIỆC CƯỚI</h4>
@@ -76,7 +76,7 @@
                     </p>
                 </div>
                 <div class="ndb2">
-                    <img class="zoom" src="/PICTURE/TiecCuoi/TiecCuoi4.jpg" alt="IMG2">
+                    <img class="zoom" src="../PICTURE/TiecCuoi/TiecCuoi4.jpg" alt="IMG2">
                 </div>
             </div>
         </div>
@@ -135,5 +135,5 @@
         <a href="#"><i class="fa-solid fa-phone"></i> 09091678989</a>
         <a href="#"><i class="fa-brands fa-facebook-f"></i> Facebook</a>
      </div>
-     <script src="/JAVACSRIP/TrangChu.js" type="text/javascript"></script>
+     <script src="../JAVACSRIP/TrangChu.js" type="text/javascript"></script>
 </body>
