--- a/HTML/TiecOutside.html
+++ b/HTML/TiecOutside.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/CSS/Outside.css">
-    <link rel="stylesheet" href="/CSS/mobileTrangChu.css" media="screen and (max-width: 550px)">
+    <link rel="stylesheet" href="../CSS/Outside.css">
+    <link rel="stylesheet" href="../CSS/mobileTrangChu.css" media="screen and (max-width: 550px)">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
@@ -25,7 +25,7 @@
      <nav>
          <div class="flex center">
            <div class="flex logo" id="main">
-             <a href="/HTML/TrangChu.html"> <img src="/PICTURE/Logo3.png" alt="img"></a>
+             <a href="/HTML/TrangChu.html"> <img src="../PICTURE/Logo3.png" alt="img"></a>
              <ul class="flex menu">
                  <li><a href="/HTML/TiecCuoi.html">Tiệc Cưới</a></li>
                  <li><a href="/HTML/HoiNghi.html">Hội Nghị</a></li>
@@ -42,7 +42,7 @@
     <div class="b1">
         <div class="overlay">
             <a href="#" id="SK">
-                <img src="/PICTURE/os.jpg" >
+                <img src="../PICTURE/os.jpg" >
                 <!-- <div class="text"><i class="fa-solid fa-arrows-to-dot" style="font-size: 40px;"></i>OutSide Catering<i class="fa-solid fa-arrows-to-dot" style="font-size: 40px;"></i></div> -->
             </a>
         </div>
@@ -62,7 +62,7 @@
                         <li>Phong cách phục vụ bài bản và chu đáo</li>
                     </ul>
                 </div>
-                <img src="/PICTURE/TO1.jpg" alt="to1">
+                <img src="../PICTURE/TO1.jpg" alt="to1">
                 <p> <i class="fa-solid fa-arrows-to-dot" style="font-size: 20px;"></i>Dịch vụ Outside Catering tại Diamond Place cung cấp dịch vụ ẩm thực từ tinh tế đến cao cấp cho tiệc từ 100 - 2000 khách, cam kết chất lượng như được tổ chức tại Diamond Place.</p>
                 <ul>
                     <li>Tiệc tea-break, tiệc VIP</li>
@@ -155,6 +155,6 @@
         <a href="#"><i class="fa-brands fa-facebook-f"></i> Facebook</a>
      </div>
 
-    <script src="/JAVACSRIP/TrangChu.js" type="text/javascript"></script>
+    <script src="../JAVACSRIP/TrangChu.js" type="text/javascript"></script>
 </body>
 </html>
