--- a/HTML/TrangChu.html
+++ b/HTML/TrangChu.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/CSS/TrangChu.css">
-    <link rel="stylesheet" href="/CSS/mobileTrangChu.css" media="screen and (max-width: 550px)">
+    <link rel="stylesheet" href="../CSS/TrangChu.css">
+    <link rel="stylesheet" href="../CSS/mobileTrangChu.css" media="screen and (max-width: 550px)">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <title>Nha Hang Tiec Cuoi</title>
 </head>
@@ -40,7 +40,7 @@
     </nav>
     <main>
         <div id="slide">
-            <img id="hinh" src="/PICTURE/1.jpg" alt="Img1">
+            <img id="hinh" src="../PICTURE/1.jpg" alt="Img1">
             <div class="Controll">
                 <i class="fa-solid fa-chevron-left" onclick="prev()"></i>
                 <i class="fa-solid fa-chevron-right" onclick="next()"></i>
@@ -58,10 +58,10 @@
                     </div>                
                 </div>
                 <div class="a2">
-                    <img src="/PICTURE/NoiDung1.jpg" alt="ND1">
+                    <img src="../PICTURE/NoiDung1.jpg" alt="ND1">
                 </div>
                 <div class="a3">
-                    <img src="/PICTURE/NoiDung2.jpg" alt="ND2">
+                    <img src="../PICTURE/NoiDung2.jpg" alt="ND2">
                 </div>
             </div>
         </div>
@@ -69,10 +69,10 @@
         <div class="a0" id="left">
             <div class="a">
                 <div class="a2">
-                    <img src="/PICTURE/NoiDung3.jpg" alt="ND1">
+                    <img src="../PICTURE/NoiDung3.jpg" alt="ND1">
                 </div>
                 <div class="a3">
-                    <img src="/PICTURE/NoiDung4.jpg" alt="ND2">
+                    <img src="../PICTURE/NoiDung4.jpg" alt="ND2">
                 </div>
                 <div class="a1 a78">
                     <h2>Hội Nghị Hoàn Hảo</h2>
@@ -89,7 +89,7 @@
             <div class="b1">
                 <div class="overlay">
                     <a href="#" id="SK">
-                        <img src="/PICTURE/NoiDung5.png" >
+                        <img src="../PICTURE/NoiDung5.png" >
                         <div class="text">SỰ KIỆN</div>
                         <div class="text-hover"> Được thiết kế như LÂU ĐÀI HOÀNG GIA, với lối kiến trúc thích hợp với các loại hình sự kiện trong đó có 
                             CÁC SỰ KIỆN CÁ NHÂN KHÁC NHAU [...]</div>
@@ -99,7 +99,7 @@
             <div class="b1">
                 <div class="overlay">
                     <a href="#" id="Tiec">
-                        <img src="/PICTURE/NoiDung7.jpg" alt="">
+                        <img src="../PICTURE/NoiDung7.jpg" alt="">
                         <div class="text">TIỆC OUTSIDE</div>
                         <div class="text-hover">Không chỉ phù hợp cho các loại hình tiệc trong khuôn khổ lồng kính tại trung tâm, chúng tôi còn là ĐỘI NGŨ KINH NGHIỆM tác chiến cho các loại hình tiệc outside bên ngoài. Với động ngũ là các chuyên gia năm sao hoàn toàn mang đến cho khách hàng sự CHUẨN MỰC TUYỆT ĐỐI 
                             trong từng sự kiện ngoài trời.</div>
@@ -109,7 +109,7 @@
             <div class="b1">
                 <div class="overlay">
                     <a href="#" id="UD">
-                        <img src="/PICTURE/NoiDung9.jpg" alt="">
+                        <img src="../PICTURE/NoiDung9.jpg" alt="">
                         <div class="text">ƯU ĐÃI</div>
                         <div class="text-hover">TRỌN GÓI TIỆC CƯỚI MÙA HÈ CHỈ VỚI 4,800,000VND/BÀN</div>
                     </a>
@@ -118,7 +118,7 @@
             <div class="b1">
                 <div class="overlay">
                     <a href="#" id="DT">
-                        <img src="/PICTURE/NoiDung11.jpg" alt="">
+                        <img src="../PICTURE/NoiDung11.jpg" alt="">
                         <div class="text">KHÁM PHÁ</div>
                         <div class="text-hover">Địa điểm xứng tầm cho những sự kiện đỉnh cao tầm vóc quốc tế và đẳng cấp</div>
                     </a>
@@ -131,17 +131,17 @@
             <h2 class="c"> <i class="fa-solid fa-arrows-to-dot" style="font-size: 20px;"></i> TIN TỨC <i class="fa-solid fa-arrows-to-dot" style="font-size: 20px;"></i> </h2>
             <div class="c0">
                 <div class="c1">
-                    <img src="/PICTURE/NoiDung8.jpg" alt="">
+                    <img src="../PICTURE/NoiDung8.jpg" alt="">
                     <h4>3 Cách Chọn Sảnh Tiệc Siêu Chuẩn Cho Ngày Cưới</h4>
                     <p>Cách chọn sảnh tiệc cưới siêu chuẩn dành cho Dâu Rể Không ít cặp đôi khi chọn...</p>
                 </div>
                 <div class="c1">
-                    <img src="/PICTURE/NoiDung12.jpg" alt="">
+                    <img src="../PICTURE/NoiDung12.jpg" alt="">
                     <h4>Siêu Phẩm Trang Trí Hoa Tươi “MY DESTINY” Dùng 10 Ngàn...</h4>
                     <p>Gói trang trí hoa tươi biến không cưới trở nên vô cùng lộng lẫy Hiện thực hóa...</p>
                 </div>
                 <div class="c1">
-                    <img src="/PICTURE/NoiDung13.jpg" alt="">
+                    <img src="../PICTURE/NoiDung13.jpg" alt="">
                     <h4>Ưu Đãi Trọn Gói Cho Ngày Cưới Trọn Vẹn Tại Diamond Place</h4>
                     <p>"ƯU ĐÃI TRỌN GÓI cho  ngày cưới thật trọn vẹn tại Diamond Place. ***ĐẶC_BIỆT:</p>
                 </div>
@@ -152,23 +152,23 @@
             <h2 class="d"> <i class="fa-solid fa-arrows-to-dot" style="font-size: 20px;"></i> THƯ VIỆN ẢNH <i class="fa-solid fa-arrows-to-dot" style="font-size: 20px;"></i> </h2>
             <div class="d0">
                 <div class="d1">
-                    <img src="/PICTURE/NoiDung14.jpg" alt="">
-                    <img src="/PICTURE/NoiDung15.jpg" alt="" class="cao1">
+                    <img src="../PICTURE/NoiDung14.jpg" alt="">
+                    <img src="../PICTURE/NoiDung15.jpg" alt="" class="cao1">
 
                 </div>
                 <div class="d1">
-                    <img id="picture" src="/PICTURE/NoiDung17.jpg" alt="" class="cao1">
-                    <img src="/PICTURE/NoiDung16.jpg" alt="">
+                    <img id="picture" src="../PICTURE/NoiDung17.jpg" alt="" class="cao1">
+                    <img src="../PICTURE/NoiDung16.jpg" alt="">
 
                 </div>
                 <div class="d1">
-                    <img src="/PICTURE/NoiDung27.jpg" alt="">
-                    <img id="img2" src="/PICTURE/NoiDung18.jpg" alt="" class="cao1">
+                    <img src="../PICTURE/NoiDung27.jpg" alt="">
+                    <img id="img2" src="../PICTURE/NoiDung18.jpg" alt="" class="cao1">
 
                 </div>
                 <div class="d1">
-                    <img src="/PICTURE/NoiDung19.jpg" alt="" class="cao1 ">
-                    <img src="/PICTURE/NoiDung20.jpg" alt="">
+                    <img src="../PICTURE/NoiDung19.jpg" alt="" class="cao1 ">
+                    <img src="../PICTURE/NoiDung20.jpg" alt="">
                 </div>
             </div>
         </div>
@@ -228,6 +228,6 @@
         <a href="#"><i class="fa-brands fa-facebook-f"></i> Facebook</a>
      </div>
 
-    <script src="/JAVACSRIP/TrangChu.js" type="text/javascript"></script>
+    <script src="../JAVACSRIP/TrangChu.js" type="text/javascript"></script>
 </body>
 </html>
